tests/src/frontend/typechecking/invalid/deferred_construct_3.sk
base class B final (x: Int, deferred y: this::T) {
  type T;

  fun no(c: Concrete<this>): B {
    c(0, 100)
  }
}
